--- a/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Base.lproj/Main.storyboard
@@ -286,7 +286,7 @@
                                                 <color key="tintColor" red="0.0297320272" green="0.028737158150000001" blue="0.023484447709999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <state key="normal" title="="/>
                                                 <connections>
-                                                    <action selector="equalAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JI0-sU-AZM"/>
+                                                    <action selector="performOperator:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HxF-iG-w3o"/>
                                                 </connections>
                                             </button>
                                         </subviews>
